Modified necessary configurations for packaging the app