@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'org.beryx.jlink' version '2.26.0'
 }
 
 repositories {
@@ -17,20 +18,28 @@ dependencies {
 }
 
 application {
+    mainModule = 'app.FitnessTrackerApp'                   // <-- your module name from module-info.java
     mainClass = 'app.FitnessTrackerApp'
 }
 
-// Add JavaFX modules to compile task (IMPORTANT)
-tasks.compileJava {
-    options.compilerArgs += [
-            '--module-path', configurations.compileClasspath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+
+    launcher {
+        name = 'FitnessTracker'
+    }
+
+    jpackage {
+        installerType = 'exe'
+        imageName = 'FitnessTracker'
+        appVersion = '1.0.0'
+
+        installerOptions = [
+                '--win-menu',
+                '--win-shortcut',
+                '--win-dir-chooser',
+                //'--icon', 'src/main/resources/FitnessTracker.ico'
+        ]
+    }
 }
 
-run {
-    jvmArgs = [
-            '--module-path', configurations.runtimeClasspath.asPath,
-            '--add-modules', 'javafx.controls,javafx.fxml'
-    ]
-}
